force-app/main/default/objects/KM_Pipeline_Config__mdt/KM_Pipeline_Config__mdt.object-meta.xml
<CustomObject>
    <description>Configuration for the 5-Tier Knowledge Deduplication Pipeline. Controls thresholds, callout budgets, score bands, and pipeline behavior.</description>
    <label>KM Pipeline Config</label>
    <pluralLabel>KM Pipeline Configs</pluralLabel>
</CustomObject>