force-app/main/default/objects/KM_Pipeline_Config__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Only one KM Pipeline Config record should be active at a time.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>