force-app/main/default/objects/KM_Pipeline_Config__mdt/fields/Manual_Review_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Manual_Review_Threshold__c</fullName>
    <defaultValue>50</defaultValue>
    <description>Confidence score cutoff for flagging a duplicate candidate for human review: candidates scoring at or above this are surfaced for a Knowledge Manager to action. Merges are always explicitly user-approved.</description>
    <label>Manual Review Threshold</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>