force-app/main/default/objects/KM_Pipeline_Config__mdt/fields/Max_Finalists__c.field-meta.xml
<CustomField>
    <fullName>Max_Finalists__c</fullName>
    <defaultValue>3</defaultValue>
    <description>Maximum number of finalist candidates passed from Tier 3 triage to Tier 4 deep analysis.</description>
    <label>Max Finalists</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>