force-app/main/default/objects/KM_Pipeline_Config__mdt/fields/Max_SubAgent_Callouts__c.field-meta.xml
<CustomField>
    <fullName>Max_SubAgent_Callouts__c</fullName>
    <defaultValue>20</defaultValue>
    <description>Hard cap on total sub-agent LLM callouts reserved for Tier 4 per Queueable execution. Prevents governor limit breach.</description>
    <label>Max SubAgent Callouts</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>