force-app/main/default/objects/KM_Pipeline_Config__mdt/fields/Min_Clarity_Score__c.field-meta.xml
<CustomField>
    <fullName>Min_Clarity_Score__c</fullName>
    <defaultValue>60</defaultValue>
    <description>Quality-gate threshold for Clarity dimension (0-100). Articles scoring below this are excluded from the dedup pipeline. 0 disables the gate.</description>
    <label>Min Clarity Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>