force-app/main/default/objects/KM_Pipeline_Config__mdt/fields/Supported_Languages__c.field-meta.xml
<CustomField>
    <fullName>Supported_Languages__c</fullName>
    <defaultValue>&quot;en_US&quot;</defaultValue>
    <description>Comma-separated list of language codes the pipeline processes. Forward-looking hook for multilingual support.</description>
    <label>Supported Languages</label>
    <length>255</length>
    <type>Text</type>
</CustomField>