force-app/main/default/objects/KM_Pipeline_Config__mdt/fields/Tier2_Similarity_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Tier2_Similarity_Threshold__c</fullName>
    <defaultValue>0.75</defaultValue>
    <description>Minimum cosine similarity score for Tier 2 vector search results to be passed to Tier 3.</description>
    <label>Tier 2 Similarity Threshold</label>
    <precision>3</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>