force-app/main/default/objects/KM_Pipeline_Config__mdt/fields/Tier2_TopK__c.field-meta.xml
<CustomField>
    <fullName>Tier2_TopK__c</fullName>
    <defaultValue>20</defaultValue>
    <description>Number of nearest neighbors to retrieve from Data Cloud vector search in Tier 2.</description>
    <label>Tier 2 TopK</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>